--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "silverstripe/framework": "~3.2",
         "erusev/parsedown": "~1.0",
         "erusev/parsedown-extra": "~0.2",
-        "unclecheese/display-logic": "~1.4",
+        "unclecheese/display-logic": "*",
         "composer/installers": "*"
     },
     "support": {
