Fixed template mapping
Converted to a vendor module

Fixed routing issue

Fixed caching of markdown

Fixed some namespace issues

Implemented flushable on the Markdown data type

Converted to a vendor module and updated dependencies

--- a/_config/routes.yml
+++ b/_config/routes.yml
@@ -3,6 +3,6 @@ Name: deployment_schedule_routes
 After:
     - "framework/*"
 ---
-Director:
+SilverStripe\Control\Director:
     rules:
-        "deployment-schedule//$Action/$ID/$OtherID": "DeploymentSchedule"
+        "deployment-schedule//$Action/$ID/$OtherID": WebbuildersGroup\DeploymentNotes\Control\DeploymentSchedule
