Fixed issue with the markdown field not working properly
Fixed another namespace issue

Fixed path to the menu_icon

Fixed loading the scripts on the front end of the deployment schedule note display

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "extra": {
         "expose": [
             "css",
-            "javascript"
+            "javascript",
+            "images"
         ],
 		"branch-alias": {
 			"dev-master": "2.0.x-dev"
